Data analysis / Raster / Resolution and projection fix.